--- a/infra/k8s/secret.yaml
+++ b/infra/k8s/secret.yaml
@@ -6,3 +6,4 @@ type: Opaque
 stringData:
   JWT_KEY: keokcjkeueue#414EekioLW$%¨&
   STRIPE_KEY: sk_test_51MXpXgH0EYJnuULSUjtB7xLCcn5fqofTIpg5TxlJ11C1RyJBk7dRBEvllLPR3j9GpPSI3iKx72XcWnqYQ9zwMvzT00i0lnbM5h
+  STRIPE_PUBLISHER_KEY: pk_test_51MXpXgH0EYJnuULSGQX25nKcfj4mwxQtMSkXdA6PksId7o34jCetOgIuleYgJToSkmCmFveQL69h7gBlcgKk6unU00g8Lcwhjr
