--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -16,8 +16,8 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-      - run: cd auth && docker build -t cygnetops/auth .
-      - run: docker push cygnetops/auth
+      - run: cd auth && docker build -t jsfreitas/auth .
+      - run: docker push jsfreitas/auth
 
 
           
